# apex-os

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.frontend  RAILWAY-SETUP.md  README.md  VERCEL-SETUP.md  push-github.bat  railway.frontend.json  setup.bat  start.bat  stop.bat
apex-backend/: .dockerignore  Dockerfile  Dockerfile.celery  alembic.ini  docker-entrypoint.sh  pyproject.toml  railway.celery.json  requirements-prod.txt  requirements.txt
apex-backend/alembic/: env.py
apex-backend/app/: __init__.py  database.py  logging_config.py  main.py
apex-backend/docs/: analyst_audit_openai_restoration.md
apex-backend/scripts/: bootstrap_xauusd.py  reset_signals_h1.py  verify_metatrader_price.py  xauusd_readiness_check.py
apex-backend/tests/: test_account.py  test_account_balance.py  test_admin_twelvedata_reset.py  test_advisor_price_resolver.py  test_advisor_routes.py  test_advisor_service.py  test_agent_analysis_service.py  test_agent_freshness.py  test_agent_llm_parse.py  test_agents_e2e.py  test_alerts_memory.py  test_alphavantage.py  test_asset_poll_interval.py  test_base_weights.py  test_binance_display_ticker.py  test_binance_futures_kline_ws.py  test_binance_rest.py  test_bootstrap_binance.py  test_bootstrap_finnhub.py  test_bootstrap_xauusd.py  test_candle_close_time.py  test_candlestick_engine.py  test_celery_async_runner.py  test_chart_bars_service.py  test_consensus_confidence.py  test_consensus_display.py  test_consensus_utils.py  test_data_source_monitor.py  test_decision_bars.py  test_degradation_engine.py  (+70 more)
(+211 files in other folders)
